refactored property value